@@ -947,6 +947,16 @@ argument_list|(
 name|sndNode
 argument_list|)
 decl_stmt|;
+name|FsDatasetTestUtils
+name|utils
+init|=
+name|cluster
+operator|.
+name|getFsDatasetTestUtils
+argument_list|(
+name|datanode
+argument_list|)
+decl_stmt|;
 comment|// replicate the block to the second datanode
 name|InetSocketAddress
 name|target
@@ -1088,72 +1098,17 @@ operator|.
 name|getBlockPoolId
 argument_list|()
 decl_stmt|;
-name|File
-name|storageDir
-init|=
-name|cluster
-operator|.
-name|getInstanceStorageDir
-argument_list|(
-name|sndNode
-argument_list|,
-literal|0
-argument_list|)
-decl_stmt|;
-name|File
-name|dir1
-init|=
-name|MiniDFSCluster
-operator|.
-name|getRbwDir
-argument_list|(
-name|storageDir
-argument_list|,
-name|bpid
-argument_list|)
-decl_stmt|;
-name|storageDir
-operator|=
-name|cluster
-operator|.
-name|getInstanceStorageDir
-argument_list|(
-name|sndNode
-argument_list|,
-literal|1
-argument_list|)
-expr_stmt|;
-name|File
-name|dir2
-init|=
-name|MiniDFSCluster
-operator|.
-name|getRbwDir
-argument_list|(
-name|storageDir
-argument_list|,
-name|bpid
-argument_list|)
-decl_stmt|;
 while|while
 condition|(
-name|dir1
+name|utils
 operator|.
-name|listFiles
+name|getStoredReplicas
+argument_list|(
+name|bpid
+argument_list|)
+operator|.
+name|hasNext
 argument_list|()
-operator|.
-name|length
-operator|!=
-literal|0
-operator|||
-name|dir2
-operator|.
-name|listFiles
-argument_list|()
-operator|.
-name|length
-operator|!=
-literal|0
 condition|)
 block|{
 name|Thread
