@@ -464,6 +464,36 @@ begin_import
 import|import
 name|java
 operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|nio
 operator|.
 name|file
@@ -2290,6 +2320,119 @@ operator|.
 name|ATOMIC_MOVE
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|getStoredReplicas (String bpid)
+specifier|public
+name|Iterator
+argument_list|<
+name|Replica
+argument_list|>
+name|getStoredReplicas
+parameter_list|(
+name|String
+name|bpid
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// Reload replicas from the disk.
+name|ReplicaMap
+name|replicaMap
+init|=
+operator|new
+name|ReplicaMap
+argument_list|(
+name|dataset
+argument_list|)
+decl_stmt|;
+try|try
+init|(
+name|FsVolumeReferences
+name|refs
+init|=
+name|dataset
+operator|.
+name|getFsVolumeReferences
+argument_list|()
+init|)
+block|{
+for|for
+control|(
+name|FsVolumeSpi
+name|vol
+range|:
+name|refs
+control|)
+block|{
+name|FsVolumeImpl
+name|volume
+init|=
+operator|(
+name|FsVolumeImpl
+operator|)
+name|vol
+decl_stmt|;
+name|volume
+operator|.
+name|getVolumeMap
+argument_list|(
+name|bpid
+argument_list|,
+name|replicaMap
+argument_list|,
+name|dataset
+operator|.
+name|ramDiskReplicaTracker
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|// Cast ReplicaInfo to Replica, because ReplicaInfo assumes a file-based
+comment|// FsVolumeSpi implementation.
+name|List
+argument_list|<
+name|Replica
+argument_list|>
+name|ret
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|replicaMap
+operator|.
+name|replicas
+argument_list|(
+name|bpid
+argument_list|)
+operator|!=
+literal|null
+condition|)
+block|{
+name|ret
+operator|.
+name|addAll
+argument_list|(
+name|replicaMap
+operator|.
+name|replicas
+argument_list|(
+name|bpid
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|ret
+operator|.
+name|iterator
+argument_list|()
+return|;
 block|}
 block|}
 end_class
